--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.6
+  firebase_core: ^2.2.0
+  provider: ^6.0.4
+  firebase_auth: ^4.1.2
+  cloud_firestore: ^4.0.5
+
 
 dev_dependencies:
   flutter_test:
