--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   provider: ^6.0.4
   firebase_auth: ^4.1.2
   cloud_firestore: ^4.0.5
+  intl: ^0.17.0
+  lottie: ^2.0.0
+  shared_preferences: ^2.0.15
 
 
 dev_dependencies:
