--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,23 @@ dependencies:
   shared_preferences: ^2.0.15
   google_fonts: ^3.0.1
   firebase_storage: ^11.0.5
+  flutter_launcher_icons: ^0.10.0
+  rename: ^2.0.1
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/1024.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/1024.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/1024.png"
+    icon_size: 48 # min:48, max:256, default: 48
 
 dev_dependencies:
   flutter_test:
